--- a/src/app/orders/chat/Chat.module.css
+++ b/src/app/orders/chat/Chat.module.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 70px);
+    padding-bottom: 70px;
     background-color: #f7f7f7;
     max-width: 600px;
     margin: 0 auto;
